# rucline

./: .gitignore  Cargo.toml  LICENSE  README.md  README.tpl  bla
.github/workflows/: audit.yml  build.yml  check.yml
docs/: asciinema.cast
examples/: cat_wrapper.rs  custom_action.rs  multiple.rs  simple.rs  simple_async.rs  simple_override.rs
src/: actions.rs  buffer.rs  completer.rs  completion.rs  context.rs  key_bindings.rs  lib.rs  prompt.rs  suggester.rs
src/buffer/: mod.rs  navigation.rs
src/completion/: mod.rs
src/prompt/: buffer.rs  builder.rs  char_string.rs  completer.rs  context.rs  mod.rs  navigation.rs  writer.rs
src/prompt/writer/: crossterm.rs  mod.rs
src/test/: mock.rs
