[package]
name = "rucline"
version = "0.2.2"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["cli", "repl", "terminal", "color"]
repository = "https://github.com/m-lima/rucline"
categories = ["command-line-interface", "command-line-utilities"]
description = "A cross-platform, UTF-8 aware, autocompletion capable, tab suggestion supporting, color rendering line reader you can 'recline' on."
license = "MIT"

[features]
default = []
serialize = [ "serde", "crossterm/serde" ]

[dependencies]
crossterm = "0.17"
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
colored = "1.9"
pwner = "0.1"
quit = "1"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = [ "serialize" ]
