[package]
name = "rucline"
version = "0.3.2"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["cli", "repl", "terminal", "color"]
repository = "https://github.com/m-lima/rucline"
categories = ["command-line-interface", "command-line-utilities"]
description = "A cross-platform, UTF-8 aware, autocompletion capable, tab suggestion supporting, color rendering line reader you can 'recline' on."
license = "MIT"

[features]
default = []
serialize = [ "serde", "crossterm/serde" ]
async = [ "crossterm/event-stream", "futures" ]

[dependencies]
crossterm = "0.18"
futures = { version = "0.3", optional = true, default-features = false }
serde = { version = "1", features = [ "derive" ], optional = true }
unicode-segmentation = "1"

[dev-dependencies]
colored = "1.9"
pwner = "0.1"
quit = "1"
tokio = { version = "0.2", features = [ "macros" ] }

[[example]]
name = "simple_async"
required-features = [ "async" ]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = [ "serialize", "async" ]
