[package]
name = "rucline"
version = "0.4.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["cli", "repl", "terminal", "color"]
repository = "https://github.com/m-lima/rucline"
categories = ["command-line-interface", "command-line-utilities"]
description = "A cross-platform, UTF-8 aware, autocompletion capable, tab suggestion supporting, color rendering line reader you can 'recline' on."
license = "MIT"

[features]
default = []
serialize = [ "serde", "crossterm/serde" ]

[dependencies]
crossterm = "0.18"
serde = { version = "1", features = [ "derive" ], optional = true }
unicode-segmentation = "1"

[dev-dependencies]
pwner = "0.1"
quit = "1"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = [ "serialize" ]
